# terminal-assistant

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  config.example.toml  pyproject.toml  setup_check.py
ai/: __init__.py  cli.py  config.py  editor.py  gittools.py  history.py  ollama_client.py  streaming.py  systeminfo.py
docs/: architecture.md  usage.md
tests/: __init__.py  test_cli.py  test_config.py  test_gittools.py  test_history.py  test_systeminfo.py
